--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "less": "^3.0.4",
     "less-loader": "^5.0.0",
     "prettier": "^1.19.1",
+    "single-spa-vue": "^2.2.0",
+    "stats-webpack-plugin": "^0.7.0",
     "vue-template-compiler": "^2.6.11"
   }
 }
